--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
          </article>
         </a>
 
-        <a href="/grooming.html" class="card-link">
+        <a href="/dog-grooming.html" class="card-link">
          <article class="card">
            <img src="image/dog-grooming-optimized.webp" alt="Dog grooming" loading="lazy" />
            <h4 data-i18n="svc_groom_title">Grooming at Home</h4>
