--- a/index.html
+++ b/index.html
@@ -505,11 +505,11 @@
   });
 </script>
 
- <script>
+ <!-- <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/service-worker.js');
   }
-</script>
+</script> -->
  
 </body>
 </html>
