--- a/collaborate.html
+++ b/collaborate.html
@@ -1,7 +1,7 @@
 <!-- Sticky Mobile Header -->
 <header class="pwz-mobile-header">
   <div class="pwz-logo">Pawzy 🐾</div>
-  <a class="pwz-header-cta" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20to%20Collaborate">
+  <a class="pwz-header-cta" href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20to%20Collaborate">
     Partner With Us
   </a>
 </header>
@@ -80,7 +80,7 @@
         <h3>Ready to grow with Pawzy?</h3>
         <p>Share your details and we’ll connect with you for onboarding.</p>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20to%20become%20a%20partner" class="pwz-btn-primary">
+      <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20to%20become%20a%20partner" class="pwz-btn-primary">
         Apply via WhatsApp
       </a>
     </div>
@@ -90,7 +90,7 @@
 
 <!-- Sticky Floating CTA -->
 <div class="pwz-sticky-cta">
-  <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20to%20Collaborate">
+  <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20to%20Collaborate">
     Collaborate With Pawzy 🤝🐾
   </a>
 </div>
@@ -240,3 +240,4 @@ document.addEventListener("DOMContentLoaded", () => {
   reveal();
 });
 </script>
+
