--- a/day-boarding.html
+++ b/day-boarding.html
@@ -1,7 +1,7 @@
 <!-- Sticky Mobile Header -->
 <header class="pwz-mobile-header">
   <div class="pwz-logo">Pawzy 🐾</div>
-  <a class="pwz-header-cta" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20Day%20Boarding">
+  <a class="pwz-header-cta" href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20Day%20Boarding">
     Book Day Boarding
   </a>
 </header>
@@ -89,7 +89,7 @@
         <h3>Want a loving place for your dog while you're away?</h3>
         <p>Share your preferred timing — we’ll confirm right away.</p>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20Please%20book%20Day%20Boarding" class="pwz-btn-primary">
+      <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Please%20book%20Day%20Boarding" class="pwz-btn-primary">
         WhatsApp to Book
       </a>
     </div>
@@ -99,7 +99,7 @@
 
 <!-- Sticky Floating CTA -->
 <div class="pwz-sticky-cta">
-  <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20Please%20book%20Day%20Boarding">
+  <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Please%20book%20Day%20Boarding">
     Book Day Boarding 🏡🐾
   </a>
 </div>
@@ -251,3 +251,4 @@ document.addEventListener("DOMContentLoaded", () => {
   reveal();
 });
 </script>
+
