--- a/dog-grooming.html
+++ b/dog-grooming.html
@@ -1,7 +1,7 @@
 <!-- Sticky Mobile Header -->
 <header class="pwz-mobile-header">
   <div class="pwz-logo">Pawzy 🐾</div>
-  <a class="pwz-header-cta" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20Grooming%20at%20Home">
+  <a class="pwz-header-cta" href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20Grooming%20at%20Home">
     Book Grooming
   </a>
 </header>
@@ -84,7 +84,7 @@
         <h3>Ready to pamper your dog with a home grooming session?</h3>
         <p>Share your location and preferred time slot — we’ll confirm instantly.</p>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20Grooming%20at%20Home" class="pwz-btn-primary">
+      <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20Grooming%20at%20Home" class="pwz-btn-primary">
         WhatsApp to Book
       </a>
     </div>
@@ -94,7 +94,7 @@
 
 <!-- Sticky Floating CTA -->
 <div class="pwz-sticky-cta">
-  <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20Book%20Grooming%20at%20Home">
+  <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Book%20Grooming%20at%20Home">
     Book Grooming at Home 🛁🐶
   </a>
 </div>
@@ -238,3 +238,4 @@ document.addEventListener("DOMContentLoaded", () => {
   reveal();
 });
 </script>
+
