--- a/vet-accompany.html
+++ b/vet-accompany.html
@@ -1,7 +1,7 @@
 <!-- Sticky Mobile Header -->
 <header class="pwz-mobile-header">
   <div class="pwz-logo">Pawzy 🐾</div>
-  <a class="pwz-header-cta" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20I%20want%20Vet%20Accompany%20Service">
+  <a class="pwz-header-cta" href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20I%20want%20Vet%20Accompany%20Service">
     Book Vet Visit
   </a>
 </header>
@@ -93,7 +93,7 @@
         <h3>Need help taking your pet to the vet?</h3>
         <p>Share your address and timing — we’ll take care of the rest.</p>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20Please%20book%20Vet%20Accompany" class="pwz-btn-primary">
+      <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Please%20book%20Vet%20Accompany" class="pwz-btn-primary">
         WhatsApp to Book
       </a>
     </div>
@@ -103,7 +103,7 @@
 
 <!-- Sticky Floating CTA -->
 <div class="pwz-sticky-cta">
-  <a href="https://wa.me/91XXXXXXXXXX?text=Hi%20Pawzy%2C%20Book%20Vet%20Accompany">
+  <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Book%20Vet%20Accompany">
     Book Vet Accompany 🚑🐾
   </a>
 </div>
@@ -248,3 +248,4 @@ document.addEventListener("DOMContentLoaded", () => {
   reveal();
 });
 </script>
+
