--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   .brand-tag{font-size:.9rem;color:var(--muted)}
 
   /* old codes  navigation burger issues start*/
-  /* /* Mobile Burger Menu */
-   .nav-list {
+  /* Mobile Burger Menu */
+   /* .nav-list {
      flex-direction: column;
      background: white;
      padding: 16px;
