--- a/index.html
+++ b/index.html
@@ -368,10 +368,11 @@
       <div class="grid cards">
        
        <a href="/dog-walking.html" class="card-link">
-         <article class="card">
+         <article class="card card-clickable">
            <img src="image/dog-walking-optimized.webp" alt="Dog walking" loading="eager" fetchpriority="high" />
-           <h4 data-i18n="svc_walk_title">Dog Walking</h4>
-           <p data-i18n="svc_walk_text">Monthly walks with GPS check-in and photo updates.</p>
+           <h4>Dog Walking</h4>
+           <p>Monthly walks with GPS check-in and photo updates.</p>
+           <p class="card-more">Learn more →</p>
          </article>
         </a>
 
@@ -386,18 +387,20 @@
 
 
         <a href="/day-boarding.html" class="card-link">
-         <article class="card">
+         <article class="card card-clickable">
            <img src="image/dog-sleeping-optimized.webp" alt="Day boarding" loading="lazy" />
-           <h4 data-i18n="svc_board_title">Day boarding</h4>
-           <p data-i18n="svc_board_text">We provide day boarding services to your furry partner while you are away.</p>
+           <h4>Day boarding</h4>
+           <p>We provide day boarding services to your furry partner while you are away.</p>
+           <p class="card-more">Learn more →</p>
          </article>
         </a>
 
         <a href="/vet-accompany.html" class="card-link">
-         <article class="card">
+         <<article class="card card-clickable">
            <img src="image/dog-car-optimized.webp" alt="Dog enjoying the ride" loading="lazy" />
-           <h4 data-i18n="svc_vet_title">Vet Accompany</h4>
-           <p data-i18n="svc_vet_text">We accompany your pet to the vet, manage queues, and keep you updated.</p>
+           <h4>Vet Accompany</h4>
+           <p>We accompany your pet to the vet, manage queues, and keep you updated.</p>
+           <p class="card-more">Learn more →</p>
          </article>
         </a>
 
