--- a/index.html
+++ b/index.html
@@ -313,13 +313,14 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <div class="brand">
+      <a href="/index.html" class="brand">
         <img src="image/pawzy-logo-optimized.webp" alt="Pawzy logo" class="logo">
         <div>
-          <h1 class="brand-title" data-i18n="brand">Pawzy</h1>
-          <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep</p>
+          <h1 class="brand-title">Pawzy</h1>
+          <p class="brand-tag">Complete pet care at your doorstep</p>
         </div>
-      </div>
+      </a>
+
 
      <div class="nav-wrapper">
         <button id="navToggle" class="nav-toggle" aria-label="Menu">☰</button>
