--- a/vet-accompany.html
+++ b/vet-accompany.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Pawzy • Vet Accompany</title>
-  <meta name="description" content="Pawzy Vet Accompany service — we take your pet to the vet, manage queues, and keep you updated." />
+  <meta name="description" content="Pawzy Vet Accompany service — safe pickup, vet visit assistance, and drop back home with regular updates." />
 
-  <!-- Favicons (same as index.html) -->
+  <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/image/pawzy-favicon-32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/image/pawzy-favicon-192.png">
   <meta name="theme-color" content="#68C07F" />
@@ -17,134 +17,166 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Shared styles (you can later move this to common.css) -->
   <style>
+    /* Base */
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       background: #f5f7fa;
       color: #111;
+      line-height: 1.7;
     }
+
+    img { max-width: 100%; display: block; }
+
     .container {
       width: min(720px, 92%);
       margin: 0 auto;
     }
+
+    /* Header (same behaviour as index) */
+    .site-header {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      background: rgba(255,255,255,0.9);
+      backdrop-filter: blur(8px);
+      border-bottom: 1px solid #e5e5e5;
+    }
+
+    .header-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 0;
+      gap: 12px;
+    }
+
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .logo {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .brand-title {
+      font-size: 1.2rem;
+      margin: 0;
+    }
+
+    .brand-tag {
+      font-size: 0.85rem;
+      color: #666;
+      margin: 0;
+    }
+
+    .nav-toggle {
+      font-size: 1.4rem;
+      background: transparent;
+      border: 1px solid #333;
+      border-radius: 8px;
+      padding: 6px 10px;
+      cursor: pointer;
+    }
+
+    .nav-popup {
+      position: absolute;
+      right: 0;
+      top: 110%;
+    }
+
+    .nav-list {
+      list-style: none;
+      margin: 0;
+      padding: 14px 18px;
+      background: #fff;
+      border-radius: 14px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+      display: none;
+      flex-direction: column;
+      gap: 12px;
+      min-width: 200px;
+    }
+
+    .nav-list.show {
+      display: flex;
+    }
+
+    @media (min-width: 900px) {
+      .nav-wrapper:hover .nav-list {
+        display: flex;
+      }
+    }
+
+    .nav-list a {
+      text-decoration: none;
+      color: #111;
+      font-weight: 500;
+    }
+
+    /* Main content */
     main {
       padding: 32px 0 80px;
     }
+
+    .section {
+      margin-bottom: 36px;
+      background: #fff;
+      border-radius: 16px;
+      padding: 22px 20px;
+      border: 1px solid #e6e6e6;
+    }
+
+    .section h1 {
+      font-size: 1.8rem;
+      margin-top: 0;
+      margin-bottom: 12px;
+    }
+
+    .section h2 {
+      font-size: 1.25rem;
+      margin-bottom: 8px;
+    }
+
+    .section p {
+      margin: 0 0 12px;
+      color: #333;
+    }
+
+    .pill {
+      display: inline-block;
+      font-size: 0.8rem;
+      padding: 6px 12px;
+      border-radius: 999px;
+      background: #eef3ff;
+      border: 1px solid #dbe4ff;
+      margin-bottom: 10px;
+    }
+
+    .cta-text {
+      text-align: center;
+      margin-top: 24px;
+      font-weight: 600;
+    }
+
+    .cta-text a {
+      color: #0b5ed7;
+      text-decoration: none;
+    }
+
+    .cta-text a:hover {
+      text-decoration: underline;
+    }
   </style>
-
-  <!-- Shared Styles -->
-<style>
-  .pawzy-section {
-    padding: 90px 16px 100px;
-    background: linear-gradient(145deg, #fffdf7, #fdf8ff);
-  }
-
-  .pawzy-container { max-width:1080px; margin:0 auto; }
-
-  
-  /* Glass Hero */
-  .glass-hero {
-    background:rgba(255,255,255,0.65);
-    backdrop-filter:blur(14px) saturate(180%);
-    border-radius:28px; padding:32px 24px;
-    border:1px solid rgba(255,255,255,0.6);
-    box-shadow:0 10px 34px rgba(0,0,0,0.07);
-    margin-bottom:48px;
-  }
-
-  .pwz-pill {
-    display:inline-block; font-size:13px; padding:6px 14px;
-    background:#f5f0ff; border:1px solid #e1d7ff;
-    border-radius:999px; margin-bottom:12px;
-  }
-
-  .pwz-hero h1 { font-size:32px; margin-bottom:12px; }
-  .pwz-hero-sub { font-size:15px; line-height:1.7; margin:10px 0; }
-
-  .pwz-cta-wrap { margin-top:20px; display:flex; gap:12px; flex-wrap:wrap; }
-  .pwz-btn-primary, .pwz-btn-ghost {
-    padding:10px 18px; border-radius:999px;
-    display:flex; justify-content:center; align-items:center;
-    font-size:14px; text-decoration:none;
-  }
-  .pwz-btn-primary {
-    background:#ff6f4c; color:white;
-    box-shadow:0 8px 20px rgba(255,111,76,0.3);
-  }
-  .pwz-btn-ghost { background:white; color:#444; border:1px solid #ddd; }
-
-  /* Cards */
-  .pwz-card-grid {
-    display:grid;
-    grid-template-columns:repeat(3,1fr);
-    gap:24px;
-  }
-
-  .pwz-card {
-    background:white; border-radius:18px;
-    padding:20px 18px 22px;
-    border:1px solid #f0e9ff;
-    box-shadow:0 10px 30px rgba(0,0,0,0.04);
-    transition:0.2s ease;
-  }
-
-  .pwz-card h2 { font-size:18px; margin-bottom:8px; }
-  .pwz-card p { color:#444; margin-bottom:6px; }
-  .pwz-highlight { font-weight:600; }
-
-  .pwz-card:hover {
-    transform:translateY(-4px);
-    box-shadow:0 14px 32px rgba(0,0,0,0.06);
-  }
-
-  /* Mobile Tap Effect */
-  @media (max-width:900px) {
-    .pwz-card:active { transform:scale(0.97); box-shadow:0 6px 22px rgba(0,0,0,0.12); }
-    .pwz-card-grid { grid-template-columns:1fr; gap:28px; }
-  }
-
-  /* Booking Strip */
-  .pwz-booking-strip {
-    margin-top:48px; padding:18px 20px;
-    background:#fff6ef; border:1px solid #ffe0c9;
-    border-radius:18px; display:flex; justify-content:space-between;
-    align-items:center; flex-wrap:wrap; gap:12px;
-  }
-
-  /* Sticky CTA Bottom */
-  .pwz-sticky-cta {
-    position:fixed; bottom:16px; width:100%;
-    display:flex; justify-content:center; z-index:1500;
-    pointer-events:none;
-  }
-  .pwz-sticky-cta a {
-    pointer-events:auto;
-    background:#ff6f4c; color:white;
-    padding:14px 26px; border-radius:999px;
-    font-size:16px; font-weight:600; text-decoration:none;
-    box-shadow:0 12px 30px rgba(255,111,76,0.45);
-  }
-
-  /* Scroll Reveal */
-  .pwz-reveal-scroll {
-    opacity:0; transform:translateY(20px);
-    transition:all 0.7s ease;
-  }
-  .pwz-reveal-scroll.visible {
-    opacity:1; transform:translateY(0);
-  }
-
-  /* Mobile */
-  @media (max-width:600px) {
-    .pawzy-section { padding:70px 12px 100px; }
-    .pwz-hero h1 { font-size:26px; }
-    .pwz-booking-strip { flex-direction:column; }
-    .pwz-booking-strip a { width:100%; }
-    .pwz-btn-primary, .pwz-btn-ghost { width:100%; }
-  }
-</style>
 </head>
 
 <body>
@@ -164,6 +196,7 @@
       <nav class="nav-popup">
         <ul id="navmenu" class="nav-list">
           <li><a href="/index.html#services">Services</a></li>
+          <li><a href="/index.html#pricing">Pricing</a></li>
           <li><a href="/index.html#contact">Contact</a></li>
         </ul>
       </nav>
@@ -172,130 +205,65 @@
 </header>
 
 <main>
-<!-- Vet Accompany Section -->
-<section id="vet-accompany" class="pawzy-section">
-  <div class="pawzy-container">
+  <div class="container">
 
-    <!-- Hero / Intro (Glass + Animation) -->
-    <div class="pwz-hero glass-hero pwz-reveal-scroll">
-
-      <span class="pwz-pill">🚑🐶 Vet Accompany • Pick & Drop • Stress-Free Vet Visits</span>
+    <section class="section">
+      <span class="pill">🚑 Vet Accompany • Pick & Drop • Stress-Free</span>
       <h1>Safe, Stress-Free Vet Visits with Pawzy</h1>
 
-      <p class="pwz-hero-sub">
-        At Pawzy, we know that vet visits can be stressful, time-consuming, and sometimes difficult to manage 
-        with a busy schedule. That’s why we offer a reliable Vet Accompany Pick & Drop Facility, ensuring your 
-        pet reaches the clinic safely, calmly, and on time — even when you can’t be there.
+      <p>
+        Vet visits can be stressful, time-consuming, and difficult to manage with a busy schedule.
+        Pawzy’s Vet Accompany service ensures your pet reaches the clinic safely, stays calm throughout
+        the visit, and returns home comfortably — even when you can’t be there.
       </p>
 
-      <p class="pwz-hero-sub">
-        Our trained handlers accompany your dog or cat throughout the entire process, from pickup at your doorstep 
-        to the vet visit and safely back home. We manage everything with patience and care, including travel comfort, 
-        check-in, waiting, and assisting the veterinarian during the examination if required. Throughout the visit, 
-        your pet is handled gently and reassuringly to reduce anxiety, especially for pets who get nervous outside 
-        their home environment.
+      <p>
+        Our trained handlers manage pickup, travel comfort, clinic waiting, and assistance during the
+        examination if required. Pets are handled gently, patiently, and with constant reassurance.
       </p>
 
-      <p class="pwz-hero-sub">
-        You receive real-time updates, photos, videos, and a complete summary of the visit — including prescriptions, 
-        recommendations, and follow-up instructions. We ensure every detail is communicated clearly so you stay fully 
-        informed and can make the best decisions for your pet’s health.
+      <p>
+        You receive clear updates, photos, videos, and a complete summary of the visit including
+        prescriptions and follow-up instructions.
       </p>
 
-      <p class="pwz-hero-sub">
-        Whether it’s a routine check-up, vaccination, grooming at vet clinics, diagnostic tests, or an urgent appointment, 
-        Pawzy ensures your pet is transported with safety, compassion, and complete responsibility. It’s a convenient, 
-        trustworthy, and stress-free solution for parents who want only the best care for their furry family members.
+      <p>
+        Whether it’s a routine check-up, vaccination, diagnostic test, or urgent appointment,
+        Pawzy ensures your pet is never alone.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>What the service includes</h2>
+      <p>• Pickup from your doorstep</p>
+      <p>• Accompaniment during the entire vet visit</p>
+      <p>• Gentle handling for anxious pets</p>
+      <p>• Real-time updates and visit summary</p>
+      <p>• Safe drop back home</p>
+    </section>
+
+    <section class="section">
+      <h2>How to book</h2>
+      <p>
+        Simply message us on WhatsApp with your location and preferred timing.
+        We’ll confirm availability and take care of the rest.
       </p>
 
-      <p class="pwz-hero-sub">
-        With Pawzy, your pet is never alone — they are always in safe, loving hands. ❤🐾🚗
+      <p class="cta-text">
+        <a href="https://wa.me/919152691665?text=Hi%20Pawzy%2C%20I%20want%20Vet%20Accompany">
+          Contact Pawzy on WhatsApp →
+        </a>
       </p>
-
-      <div class="pwz-cta-wrap">
-        <a href="#vet-accompany-booking" class="pwz-btn-primary">Book Vet Accompany</a>
-        <a href="#vet-accompany-faq" class="pwz-btn-ghost">View FAQs</a>
-      </div>
-    </div>
-
-    <!-- Feature Cards -->
-    <div class="pwz-card-grid">
-
-      <!-- Card 1 -->
-      <article class="pwz-card pwz-reveal-scroll">
-        <h2>Pickup, Vet Support & Safe Drop</h2>
-        <p>
-          Your pet is picked up from your doorstep, accompanied throughout the vet process, and safely 
-          dropped back home. Travel comfort, waiting, and check-ins are fully handled by our trained team.
-        </p>
-        <p class="pwz-highlight">A complete end-to-end service for busy pet parents. 🚗🐾</p>
-      </article>
-
-      <!-- Card 2 -->
-      <article class="pwz-card pwz-reveal-scroll">
-        <h2>Gentle Handling & Anxiety-Free Support</h2>
-        <p>
-          Pets who get nervous outside home receive extra comfort, reassurance, and slow-paced handling. 
-          Our staff stays with them throughout, ensuring they remain calm and feel emotionally supported.
-        </p>
-        <p class="pwz-highlight">Because every vet visit should feel safe. ❤️🐶</p>
-      </article>
-
-      <!-- Card 3 -->
-      <article class="pwz-card pwz-reveal-scroll">
-        <h2>Real-Time Updates & Medical Summary</h2>
-        <p>
-          Parents receive photos, videos, updates, and a detailed summary of the visit including prescriptions, 
-          vet instructions, medicines, and follow-up reminders — everything clearly explained.
-        </p>
-        <p class="pwz-highlight">Full transparency for your pet’s health. 📋✨</p>
-      </article>
-
-    </div>
-
-    <!-- Booking Strip -->
-    <div id="vet-accompany-booking" class="pwz-booking-strip pwz-reveal-scroll">
-      <div>
-        <h3>Need help taking your pet to the vet?</h3>
-        <p>Share your address and timing — we’ll take care of the rest.</p>
-      </div>
-      <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Please%20book%20Vet%20Accompany" class="pwz-btn-primary">
-        WhatsApp to Book
-      </a>
-    </div>
+    </section>
 
   </div>
-</section>
-
-<!-- Sticky Floating CTA -->
-<div class="pwz-sticky-cta">
-  <a href="https://wa.me/+919152691665?text=Hi%20Pawzy%2C%20Book%20Vet%20Accompany">
-    Book Vet Accompany 🚑🐾
-  </a>
-</div>
-
-
 </main>
-<!-- Scroll Reveal Script -->
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const elements = document.querySelectorAll(".pwz-reveal-scroll");
-  const reveal = () => {
-    const trigger = window.innerHeight * 0.85;
-    elements.forEach(el => {
-      if (el.getBoundingClientRect().top < trigger) el.classList.add("visible");
-    });
-  };
-  window.addEventListener("scroll", reveal);
-  reveal();
-});
-</script>
 
 <script>
   const toggle = document.getElementById("navToggle");
   const menu = document.getElementById("navmenu");
 
-  toggle?.addEventListener("click", (e) => {
+  toggle.addEventListener("click", (e) => {
     e.stopPropagation();
     menu.classList.toggle("show");
   });
@@ -307,5 +275,3 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
-
