--- a/day-boarding.html
+++ b/day-boarding.html
@@ -16,6 +16,108 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+  /* ===== Header (required for consistency) ===== */
+.site-header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(8px);
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.container {
+  width: min(1100px, 92%);
+  margin: 0 auto;
+}
+
+.header-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px 0;
+  gap: 12px;
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.logo {
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.brand-title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+.brand-tag {
+  font-size: 0.9rem;
+  color: #666;
+  margin: 0;
+}
+
+/* ===== Burger Menu ===== */
+.nav-wrapper {
+  position: relative;
+}
+
+.nav-toggle {
+  font-size: 1.4rem;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #333;
+  border-radius: 10px;
+  padding: 0.4rem 0.6rem;
+}
+
+.nav-popup {
+  position: absolute;
+  top: 110%;
+  right: 0;
+  z-index: 999;
+}
+
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 14px 18px;
+  background: #ffffff;
+  border-radius: 14px;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+  display: none;
+  flex-direction: column;
+  gap: 14px;
+  min-width: 220px;
+}
+
+.nav-list.show {
+  display: flex;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: #111;
+  font-weight: 500;
+}
+
+/* Desktop hover */
+@media (min-width: 900px) {
+  .nav-wrapper:hover .nav-list {
+    display: flex;
+  }
+}
+
 </head>
 
 <body>
@@ -172,3 +274,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
