--- a/day-boarding.html
+++ b/day-boarding.html
@@ -18,7 +18,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   /* ===== Header (required for consistency) ===== */
-.site-header {
+  <style>
+  .site-header {
   position: sticky;
   top: 0;
   z-index: 100;
@@ -117,7 +118,7 @@
     display: flex;
   }
 }
-
+</style>
 </head>
 
 <body>
@@ -274,4 +275,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
