--- a/vet-accompany.html
+++ b/vet-accompany.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* Base */
+    /* ===== Base (aligned with index.html) ===== */
     * { box-sizing: border-box; }
     body {
       margin: 0;
@@ -28,27 +28,25 @@
       line-height: 1.7;
     }
 
-    img { max-width: 100%; display: block; }
-
     .container {
-      width: min(720px, 92%);
+      width: min(1100px, 92%);
       margin: 0 auto;
     }
 
-    /* Header (same behaviour as index) */
+    /* ===== Header (same as index.html) ===== */
     .site-header {
       position: sticky;
       top: 0;
       z-index: 100;
-      background: rgba(255,255,255,0.9);
+      background: rgba(255,255,255,0.85);
       backdrop-filter: blur(8px);
-      border-bottom: 1px solid #e5e5e5;
+      border-bottom: 1px solid #e0e0e0;
     }
 
     .header-inner {
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
       padding: 12px 0;
       gap: 12px;
     }
@@ -62,60 +60,56 @@
     }
 
     .logo {
-      width: 56px;
-      height: 56px;
+      width: 64px;
+      height: 64px;
       border-radius: 50%;
       object-fit: cover;
     }
 
     .brand-title {
-      font-size: 1.2rem;
+      font-size: 1.25rem;
+      font-weight: 700;
       margin: 0;
     }
 
     .brand-tag {
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       color: #666;
       margin: 0;
     }
 
+    .nav-wrapper { position: relative; }
+
     .nav-toggle {
       font-size: 1.4rem;
+      cursor: pointer;
       background: transparent;
       border: 1px solid #333;
-      border-radius: 8px;
-      padding: 6px 10px;
-      cursor: pointer;
+      border-radius: 10px;
+      padding: .4rem .6rem;
     }
 
     .nav-popup {
       position: absolute;
-      right: 0;
       top: 110%;
+      right: 0;
+      z-index: 999;
     }
 
     .nav-list {
       list-style: none;
       margin: 0;
       padding: 14px 18px;
-      background: #fff;
+      background: #ffffff;
       border-radius: 14px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.15);
       display: none;
       flex-direction: column;
-      gap: 12px;
-      min-width: 200px;
+      gap: 14px;
+      min-width: 220px;
     }
 
-    .nav-list.show {
-      display: flex;
-    }
-
-    @media (min-width: 900px) {
-      .nav-wrapper:hover .nav-list {
-        display: flex;
-      }
-    }
+    .nav-list.show { display: flex; }
 
     .nav-list a {
       text-decoration: none;
@@ -123,16 +117,20 @@
       font-weight: 500;
     }
 
-    /* Main content */
+    @media (min-width: 900px) {
+      .nav-wrapper:hover .nav-list { display: flex; }
+    }
+
+    /* ===== Page content ===== */
     main {
       padding: 32px 0 80px;
     }
 
     .section {
-      margin-bottom: 36px;
-      background: #fff;
+      background: #ffffff;
       border-radius: 16px;
       padding: 22px 20px;
+      margin-bottom: 32px;
       border: 1px solid #e6e6e6;
     }
 
@@ -164,7 +162,7 @@
 
     .cta-text {
       text-align: center;
-      margin-top: 24px;
+      margin-top: 20px;
       font-weight: 600;
     }
 
@@ -175,6 +173,29 @@
 
     .cta-text a:hover {
       text-decoration: underline;
+    }
+
+    /* ===== Sticky WhatsApp CTA (kept intentionally) ===== */
+    .pwz-sticky-cta {
+      position: fixed;
+      bottom: 16px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      z-index: 1500;
+      pointer-events: none;
+    }
+
+    .pwz-sticky-cta a {
+      pointer-events: auto;
+      background: #25D366;
+      color: #002;
+      padding: 14px 26px;
+      border-radius: 999px;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 600;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
     }
   </style>
 </head>
@@ -258,6 +279,13 @@
 
   </div>
 </main>
+
+<!-- Sticky CTA -->
+<div class="pwz-sticky-cta">
+  <a href="https://wa.me/919152691665?text=Hi%20Pawzy%2C%20I%20want%20Vet%20Accompany">
+    Book Vet Accompany on WhatsApp 🐾
+  </a>
+</div>
 
 <script>
   const toggle = document.getElementById("navToggle");
